[tool.poetry]
name = "visprompt"
version = "0.1.0"
description = ""
authors = ["mschnei"]
packages = [ {include = "visprompt"} ]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
opencv-contrib-python-headless = "*"
click = "*"
numpy = "*"
pillow = "*"
opencv-python-headless = "*"
torch = "*"
transformers = "*"

[tool.poetry.dev-dependencies]
black = "*"
isort= "*"
pre-commit = "*"
pytest = "*"
pytest-black = "*"
bumpversion = "*"
ipykernel = "*"
tqdm = "*"
pyside6 = "^6.5.2"

[tool.poetry.scripts]
print_shape = "visprompt.scripts.print_shape:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
