[tool.poetry]
name = "visprompt"
version = "0.1.0"
description = ""
authors = ["mschnei"]
packages = [ {include = "visprompt"} ]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
opencv-contrib-python-headless = "*"
click = "*"
numpy = "*"
pillow = "*"
opencv-python-headless = "*"
torch = "*"
transformers = "*"

[tool.poetry.dev-dependencies]
black = "*"
isort= "*"
flake8 = "*"
pre-commit = "*"
bumpversion = "*"
ipykernel = "*"
tqdm = "*"
pyside6 = "^6.5.2"
coverage = "*"
pytest = "*"
pytest-black = "*"
pytest-cov = "*"
pytest-flake8 = "*"
pytest-isort = "*"
pytest-xdist = "*"
taskipy = "*"

[tool.taskipy.tasks]
bumpversion = "poetry run bumpversion patch && git push && git push --tags"

[tool.black]
line-length = 79
include = "\\.pyi?$"
exclude = """
/(
    \\.git
  | \\.tox
  | \\.venv
  | tmp
)/
"""

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"