[tool.poetry]
name = "visprompt"
version = "0.1.1"
description = ""
authors = ["mschnei"]
packages = [ {include = "visprompt"} ]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
opencv-contrib-python-headless = "*"
click = "*"
numpy = "*"
pillow = "*"
opencv-python-headless = "*"
torchvision = "*"
torch = "*"
transformers = "*"
tqdm = "*"
pyside6 = "^6.5.2"
pyzmq = "26.0.0" # pin version because latest release is broken

[tool.poetry.dev-dependencies]
black = "*"
isort= "*"
flake8 = "*"
pre-commit = "*"
bumpversion = "*"
ipykernel = "*"
coverage = "*"
pytest = "*"
pytest-black = "*"
pytest-cov = "*"
pytest-flake8 = "*"
pytest-isort = "*"
pytest-xdist = "*"
taskipy = "*"

[tool.taskipy.tasks]
gui = "python visprompt/gui/image_drawer.py"
inference_sam = "python visprompt/segmentation/run_inference_sam_cli.py"
inference_seggpt = "python visprompt/segmentation/run_inference_seggpt_cli.py"
bumpversion = "poetry run bumpversion patch && git push && git push --tags"

[tool.black]
line-length = 79
include = "\\.pyi?$"
exclude = """
/(
    \\.git
  | \\.tox
  | \\.venv
  | tmp
)/
"""

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"